fix tabs overflow issue

--- a/content/toolbarpositionchanger.css
+++ b/content/toolbarpositionchanger.css
@@ -18,9 +18,6 @@
     #browser-bottombox > #TabsToolbar[invertedTabBackground]:not([customizing]) .tabbrowser-tab[selected] {
         margin-top: -1px!important;
     }
-    .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
-        overflow: visible;
-    }
     /*
       For toolbar drag and drop
     */
